# fastapi_douban

./: .gitignore  data.json  dffv.html  haha.py  main.py  pyproject.toml  requirements.txt  test.py  testmy.py  v1.py  xixi.py  测试.html
dataModel/: crud.py  database.py  models.py  schemas.py
movieReviewPage/: MovieReview1  MovieReview2  MovieReview3  MovieReview4  MovieReview5
